--- a/docs/de-de/modules/crm/pages/ticketsystem-nutzen.adoc
+++ b/docs/de-de/modules/crm/pages/ticketsystem-nutzen.adoc
@@ -30,7 +30,7 @@ Speichere für Eigner, die das Ticketsystem nutzen sollen, im Benutzer:innenkont
 [IMPORTANT]
 .Priorität der Signatur beachten
 ====
-Die im Benutzerkonto eingegebene Signatur hat Priorität gegenüber der Signatur, die im Menü xref:crm:e-mails-versenden.adoc#600[Einrichtung » Mandant » [Mandant wählen] » E-Mail » Signatur] gespeichert ist. +
+Die im Benutzerkonto eingegebene Signatur hat Priorität gegenüber der xref:crm:e-mails-versenden.adoc#600[Signatur], die im Menü *Einrichtung » Mandant » [Mandant wählen] » E-Mail » Signatur* gespeichert ist. +
 Wenn du die Template-Variable `$SignatureHTML` in die E-Mail-Vorlage eingefügt hast, wird die Signatur aus dem Benutzer:innenkonto übernommen. Wenn keine Signatur im Benutzer:innenkonto gespeichert ist, wird die Signatur, die im Menü *Einrichtung » Mandant » [Mandant wählen] » E-Mail » Signatur* gespeichert ist, übernommen. +
 Wenn du die Template-Variable `$SignatureText` in die E-Mail-Vorlage eingefügt hast, wird immer die Signatur, die im Menü *Einrichtung » Mandant » [Mandant wählen] » E-Mail » Signatur* gespeichert ist, übernommen.
 ====
@@ -95,76 +95,76 @@ Nachdem du alle Tests durchgeführt hast, musst du den Testmodus im Menü *Einri
 
 | *E-Mail-Versand testen*
 |Testet die Funktion des E-Mail-Versands. Eine Meldung erfolgt, ob der Test erfolgreich war. +
-*_Wichtig:_* Bei nicht erfolgreichem Test sind meist falsche Zugangsdaten oder ein falsches Kennwort die Ursache. Im Fehlerfall die Parameter prüfen.
+*_Wichtig:_* Bei nicht erfolgreichem Test sind meist falsche Zugangsdaten oder ein falsches Kennwort die Ursache. Prüfe die Parameter im Fehlerfall.
 
 2+^| *Konto* (icon:exclamation-triangle[role="red"] *_Hinweis:_* Die Einstellung in diesem Bereich ist eine Pflichteinstellung.)
 
 | *E-Mail*
-|E-Mail-Adresse eingeben, die für das Ticketsystem verwendet werden soll. Das ist ein Pflichtfeld.
+|Gib die E-Mail-Adresse ein, die für das Ticketsystem verwendet werden soll. Das ist ein Pflichtfeld.
 
 2+^| *Abruf* (icon:exclamation-triangle[role="red"] *_Hinweis:_* Alle Einstellungen in diesem Bereich sind Pflichteinstellungen.)
 
 | *Aktiv*
-|Soll das Konto und damit der Abruf aktiv sein, Option aktivieren. +
-Soll das Konto nicht aktiv sein, Option deaktivieren und speichern. Das Konto bleibt verfügbar und kann jederzeit wieder aktiviert werden.
+|Aktiviere die Option, wenn das Konto und damit der Abruf aktiv sein soll. +
+Wenn das Konto nicht aktiv sein soll, deaktiviere die Option und speichere die Einstellung. Das Konto bleibt verfügbar und du kannst es jederzeit wieder aktivieren.
 
 | *Benutzer*
-|Benutzer:innenname zu der E-Mail-Adresse eingeben.
+|Gib den Benutzer:innenname zu der E-Mail-Adresse ein.
 
 | *Passwort*
 |Passwort zu dem Benutzer:innennamen und der E-Mail-Adresse eingeben.
 
 | *Verfahren*
-|Verfahren wählen. Empfohlenes Verfahren: IMAP. +
+|Wähle das Verfahren. Empfohlenes Verfahren: IMAP. +
 *IMAP* = Die E-Mails werden auf dem Server des Providers verwaltet und stehen mehreren Geräten wie z.B. Computer, Tablet oder Smartphone zur Verfügung. Die E-Mails werden auf den Geräten synchronisiert; der Stand ist überall identisch. +
-*POP* = E-Mail-Verbindungsprotokoll, das die Abholung von E-Mails von einem Server regelt. Zwar ist keine ständige Verbindung zum Server nötig, dennoch kann es besonders bei der Arbeit mit mehreren Geräten zu Datenfehlern kommen. Bei Nutzung des POP-Verfahrens werden alle Nachrichten vom Server komplett oder als Kopie auf das Gerät heruntergeladen. Diese können dort lokal gelesen, beantwortet oder gelöscht werden. Änderungen werden weder auf den anderen verwendeten Geräte noch auf dem Server gespeichert. Eine Synchronisierung findet nicht statt.
+*POP* = E-Mail-Verbindungsprotokoll, das die Abholung von E-Mails von einem Server regelt. Zwar ist keine ständige Verbindung zum Server nötig, dennoch kann es besonders bei der Arbeit mit mehreren Geräten zu Datenfehlern kommen. Bei Nutzung des POP-Verfahrens werden alle Nachrichten vom Server komplett oder als Kopie auf das Gerät heruntergeladen. Diese können dort lokal gelesen, beantwortet oder gelöscht werden. Änderungen werden weder auf den anderen verwendeten Geräte noch auf dem Server gespeichert. Eine Synchronisierung findet also _nicht_ statt.
 
 | *Port*
-|Standardwert: 25, dieser Wert ist für fast alle Provider korrekt. Andernfalls den korrekten Port beim Provider erfragen. Info zu *Verschlüsselung* beachten.
+|Der Standardwert ist 25. Dieser Wert ist für fast alle Provider korrekt. Erfrage andernfalls den korrekten Port beim Provider. Beachte die Informationen zur *Verschlüsselung*.
 
 | *Verschlüsselung*
-| *SSL*, *TLS* (Standardeinstellung) oder *keine Verschlüsselung* wählen. +
-*_Wichtig:_* Für plentymarkets E-Mail-Konten mit dem Typ IMAP die Einstellung *TLS* mit Port 143 oder die Einstellung *keine Verschlüsselung* mit Port 143 verwenden. +
-TLS-Verschlüsselung = Bei Host auf eigener Domain (z.B. mail.domain.tld) kann über Port 143 nicht *TLS* als Verschlüsselungsmethode verwendet werden, sondern die Einstellung *keine Verschlüsselung*. Bei Host auf plentymarkets (z.B. mail.plentymarkets.com) kann Port 143 in Verbindung mit *TLS* genutzt werden.
+|Wähle *SSL*, *TLS* (Standardeinstellung) oder *keine Verschlüsselung*. +
+*_Wichtig:_* Verwende für plentymarkets E-Mail-Konten mit dem Typ *IMAP* die Einstellung *TLS* mit Port *143* oder die Einstellung *keine Verschlüsselung* mit Port *143*. +
+*TLS-Verschlüsselung* = Bei Host auf eigener Domain (z.B. mail.domain.tld) kann über Port *143* _nicht_ *TLS* als Verschlüsselungsmethode verwendet werden, sondern die Einstellung *keine Verschlüsselung*. Bei Host auf plentymarkets (z.B. mail.plentymarkets.com) kann Port *143* in Verbindung mit *TLS* genutzt werden.
 
 | *Host*
-|URL des Host-Rechners eingeben, auf dem das E-Mail-Konto verwaltet wird.
+|Gib die URL des Host-Rechners ein, auf dem das E-Mail-Konto verwaltet wird.
 
 | *Typ/Status neues Ticket*
-|Typ und Status für neue Tickets aus den Dropdown-Listen wählen. Wird ein neues Ticket mit diesen Parametern erstellt, erfolgt der automatische E-Mail-Versand.
+|Wähle den Typ und Status für neue Tickets aus den Dropdown-Listen. Wenn ein neues Ticket mit diesen Parametern erstellt wird, erfolgt der automatische E-Mail-Versand.
 
 2+^| *Versand* (icon:exclamation-triangle[role="red"] *_Hinweis:_* Alle Einstellungen in diesem Bereich sind Pflichteinstellungen.)
 
 | *Name Sender*
-|Eigenen Namen oder Namen der eigenen Firma/Shop eingeben. Der Name wird der Person, die die E-Mail erhalten soll, angezeigt.
+|Gib deinen eigenen Namen oder den Namen deiner Firma/deines Webshops ein. Dieser Name wird der Person, die die E-Mail erhalten soll, angezeigt.
 
 | *Antwort an*
-|E-Mail-Adresse eingeben, an die die Antwort gesendet werden soll.
+|Gib die E-Mail-Adresse ein, an die die Antwort gesendet werden soll.
 
 | *Benutzer*
-|Benutzer:innenname zu der E-Mail-Adresse eingeben.
+|Gib den Benutzer:innenname zu der E-Mail-Adresse ein.
 
 | *Passwort*
-|Passwort zu dem Benutzer:innennamen und der E-Mail-Adresse eingeben.
+|Gib das Passwort zu dem Benutzer:innennamen und der E-Mail-Adresse ein.
 
 | *Port*
-|Standardwert: 25, dieser Wert ist für fast alle Provider korrekt. Andernfalls den korrekten Port beim Provider erfragen.
+|Der Standardwert ist 25. Dieser Wert ist für fast alle Provider korrekt. Erfrage ansonsten den korrekten Port bei deinem Provider.
 
 | *Verschlüsselung*
-| *SSL*, *TLS* oder *keine Verschlüsselung* wählen.
+|Wähle *SSL*, *TLS* oder *keine Verschlüsselung*.
 
 | *Host*
-|URL des Host-Rechners eingeben, auf dem das E-Mail-Konto verwaltet wird.
+|Gib die URL des Host-Rechners ein, auf dem das E-Mail-Konto verwaltet wird.
 
 2+^| *Aktionen*
 
 | *Aktion*
 |Mit *Verschieben* werden die E-Mails in einen bestimmten Ordner eingeordnet, nachdem das Ticket erstellt wurde. Damit können die E-Mails archiviert werden. +
-*Löschen* wählen, wenn die E-Mails nicht gespeichert werden sollen. Die E-Mails werden dann nach Eingang und Zuordnung im Ticketsystem gelöscht.
+Wähle *Löschen*, wenn die E-Mails _nicht_ gespeichert werden sollen. Die E-Mails werden dann nach Eingang und Zuordnung im Ticketsystem gelöscht.
 
 | *Verschieben nach*
-|Diese Option ist nur sichtbar, wenn die Aktion *Verschieben* gewählt wurde. Ordner wählen, in den die E-Mails verschoben werden sollen. +
-*_Wichtig:_* Die Wahl eines Ordners ist zwingend. Wenn kein Ordner gewählt wird, werden die E-Mails nicht verschoben.
+|Diese Option ist nur sichtbar, wenn die Aktion *Verschieben* gewählt wurde. Wähle den Ordner, in den die E-Mails verschoben werden sollen. +
+*_Wichtig:_* Die Wahl eines Ordners ist zwingend. Wenn du keinen Ordner wählst, werden die E-Mails _nicht_ verschoben.
 |====
 
 [#650]
@@ -361,45 +361,45 @@ Ticket ohne Vorlage erstellen:
 |Einstellung |Erläuterung
 
 | *Rolle*
-|Rolle des Eigners aus der Dropdown-Liste wählen. Zur Auswahl stehen die im Menü *Einrichtung » CRM » Ticketsystem » Einstellungen* im Tab *Rollen* hinzugefügten xref:crm:ticketsystem-nutzen.adoc#700[Rollen]. +
-Das ist ein Pflichtfeld. Wenn keine Rolle gewählt ist, kann das Ticket nicht erstellt werden.
+|Wähle die Rolle des Eigners aus der Dropdown-Liste. Zur Auswahl stehen die im Menü *Einrichtung » CRM » Ticketsystem » Einstellungen* im Tab *Rollen* hinzugefügten xref:crm:ticketsystem-nutzen.adoc#700[Rollen]. +
+Das ist ein Pflichtfeld. Wenn du keine Rolle wählst, kann das Ticket nicht erstellt werden.
 
 | *Eigner*
-|In ein neues Ticket wird automatisch die aktive anwendende Person als Eigner:in übernommen. Bei Bedarf anderen Eigner aus der Dropdown-Liste wählen. +
-Das ist ein Pflichtfeld. Wenn keine Eigner:in gewählt ist, kann das Ticket nicht erstellt werden.
+|In ein neues Ticket wird automatisch die aktive anwendende Person als Eigner:in übernommen. Wähle bei Bedarf einen anderen Eigner aus der Dropdown-Liste. +
+Das ist ein Pflichtfeld. Wenn du keine Eigner:in wählst, kann das Ticket nicht erstellt werden.
 
 | *Kunde*
-|Auf der Tastatur die Pfeiltaste nach unten drücken. Eine Liste von Kund:innen wird angezeigt. Kund:innen werden anhand ihrer ID sortiert angezeigt. Die Person mit der niedrigsten ID wird an erster Stelle angezeigt. Mit einem Klick auf die Person wird der Name sowie die ID in das Feld übernommen.
+|Drücke auf deiner Tastatur die Pfeiltaste nach unten, um eine Liste von Kund:innen anzuzeigen. Kund:innen werden anhand ihrer ID sortiert angezeigt. Die Person mit der niedrigsten ID wird an erster Stelle angezeigt. Mit einem Klick auf die Person wird der Name sowie die ID in das Feld übernommen.
 
 | *Titel*
-|Titel für das Ticket eingeben. +
-Das ist ein Pflichtfeld. Wenn kein Titel eingegeben ist, kann das Ticket nicht erstellt werden.
+|Gib einen Titel für das Ticket ein. +
+Das ist ein Pflichtfeld. Wenn du keinen Titel eingibst, kann das Ticket nicht erstellt werden.
 
 | *Tags*
-|Klicken, um Tags hinzuzufügen. Zur Auswahl stehen die im Menü *Einrichtung » Einstellungen » Tags* hinzugefügten Tags. Weitere Informationen dazu findest du im Kapitel <<#tags-erstellen-tickets, Tags für Tickets erstellen>>.
+|Klicke, um Tags hinzuzufügen. Zur Auswahl stehen die im Menü *Einrichtung » Einstellungen » Tags* hinzugefügten Tags. Weitere Informationen dazu findest du im Kapitel <<#tags-erstellen-tickets, Tags für Tickets erstellen>>.
 
 | *Ordner*
-|Ordner aus der Dropdown-Liste wählen. Zur Auswahl stehen die im Menü *CRM » Ticketsystem* erstellten xref:crm:ticketsystem-nutzen.adoc#4500[Ordner].
+|Wähle einen Ordner aus der Dropdown-Liste. Zur Auswahl stehen die im Menü *CRM » Ticketsystem* erstellten xref:crm:ticketsystem-nutzen.adoc#4500[Ordner].
 
 | *Priorität*
-|Priorität aus der Dropdown-Liste wählen.
+|Wähle die Priorität aus der Dropdown-Liste.
 
 | *Typ*
-|Typ aus der Dropdown-Liste wählen. Zur Auswahl stehen die im Menü *Einrichtung » CRM » Ticketsystem » Einstellungen* im Tab *Typen &amp; Status* erstellten Typen. +
-Das ist ein Pflichtfeld. Wenn kein Typ gewählt ist, kann das Ticket nicht erstellt werden.
+|Wähle einen Typ aus der Dropdown-Liste. Zur Auswahl stehen die im Menü *Einrichtung » CRM » Ticketsystem » Einstellungen* im Tab *Typen &amp; Status* erstellten Typen. +
+Das ist ein Pflichtfeld. Wenn du keinen Typ wählst, kann das Ticket nicht erstellt werden.
 
 | *Status*
-|Status aus der Dropdown-Liste wählen. Die Dropdown-Liste ist erst aktiviert, wenn zuvor ein Typ gewählt wurde. Zur Auswahl stehen die im Menü *Einrichtung » CRM » Ticketsystem » Einstellungen* im Tab *Typen &amp; Status* erstellten Status. +
-Das ist ein Pflichtfeld. Wenn kein Status gewählt ist, kann das Ticket nicht erstellt werden.
+|Wähle einen Status aus der Dropdown-Liste. Die Dropdown-Liste ist erst aktiviert, wenn du zuvor einen Typ gewählt hast. Zur Auswahl stehen die im Menü *Einrichtung » CRM » Ticketsystem » Einstellungen* im Tab *Typen &amp; Status* erstellten Status. +
+Das ist ein Pflichtfeld. Wenn du keinen Status wählst, kann das Ticket nicht erstellt werden.
 
 | *Termin*
-|Termin im Format TT.MM.JJJJ eingeben oder das Datum aus dem Kalender (icon:calendar[]) wählen.
+|Gib den Termin im Format TT.MM.JJJJ ein oder wähle das Datum aus dem Kalender (icon:calendar[]).
 
 | *Ticket als vertraulich definieren (unsichtbar für Kunden)*
-|Klicken, um das Ticket als vertraulich zu definieren. Wenn das Ticket vertraulich ist, ist die Nachrichtenfunktion deaktiviert. Vertrauliche Tickets sind für Kund:innen _nicht_ sichtbar.
+|Klicke, um das Ticket als vertraulich zu definieren. Wenn das Ticket vertraulich ist, ist die Nachrichtenfunktion deaktiviert. Vertrauliche Tickets sind für Kund:innen _nicht_ sichtbar.
 
 | *Mandant (Shop)*
-|Mandant (Shop) aus der Dropdown-Liste wählen.
+|Wähle einen Mandant (Shop) aus der Dropdown-Liste.
 |====
 
 Nachdem du die Einstellungen gespeichert hast, wird die ID des Tickets im Tab angezeigt. Außerdem wird eine Symbolleiste angezeigt. Beachte die Erläuterungen zur Symbolleiste in <<#table-toolbar-ticket>>.
@@ -417,8 +417,8 @@ Nachdem du die Einstellungen gespeichert hast, wird die ID des Tickets im Tab an
 |Kommentare sind rot gekennzeichnet und für die Kund:innen _nicht_ sichtbar. Kommentare dienen der internen Kommunikation. Weitere Informationen findest du im Kapitel xref:crm:ticketsystem-nutzen.adoc#2500[Kommentar hinzufügen].
 
 | *E-Mail-Vorlage senden*
-|Klicken, um eine E-Mail-Vorlage zu senden. Das Fenster *E-Mail-Vorlage senden* wird geöffnet. Vorlage aus der Dropdown-Liste wählen und auf *E-Mail-Vorlage senden* klicken. +
-Das Ticket muss mit einer Person verknüpft sein, um die E-Mail-Vorlage zu senden. Dazu in das Feld *Kunde* klicken und auf der Tastatur die Pfeiltaste nach unten drücken. Eine Liste von Kund:innen wird angezeigt. Kund:innen werden anhand ihrer ID sortiert angezeigt. Die Person mit der niedrigsten ID wird an erster Stelle angezeigt. Mit einem Klick auf diese Person wird der Name sowie die ID in das Feld übernommen.
+|Klicke, um eine E-Mail-Vorlage zu senden. Das Fenster *E-Mail-Vorlage senden* wird geöffnet. Wähle die Vorlage aus der Dropdown-Liste und klicke auf *E-Mail-Vorlage senden*. +
+Das Ticket muss mit einer Person verknüpft sein, um die E-Mail-Vorlage zu senden. Klicke dazu in das Feld *Kunde* und drücke auf deiner Tastatur die Pfeiltaste nach unten. Eine Liste von Kund:innen wird angezeigt. Kund:innen werden anhand ihrer ID sortiert angezeigt. Die Person mit der niedrigsten ID wird an erster Stelle angezeigt. Mit einem Klick auf diese Person wird der Name sowie die ID in das Feld übernommen.
 
 | *Drucken*
 |Druckt das Ticket. Ein Ticket wird als xref:crm:ticketsystem-nutzen.adoc#5300[Ticketkarte] gedruckt.
@@ -427,16 +427,16 @@ Das Ticket muss mit einer Person verknüpft sein, um die E-Mail-Vorlage zu sende
 |Öffnet das Elternticket in einem neuen Tab, falls vorhanden.
 
 | *Statushistorie anzeigen/verbergen*
-|Statushistorie anzeigen oder verbergen. Wenn *Statushistorie anzeigen* aktiviert wird, wird der Bereich *Statushistorie* auf der rechten Seite im Ticket angezeigt. Die Statushistorie listet alle Status auf, die das Ticket bisher durchlaufen hat.
+|Wenn du *Statushistorie anzeigen* aktivierst, wird der Bereich *Statushistorie* auf der rechten Seite im Ticket angezeigt. Die Statushistorie listet alle Status auf, die das Ticket bisher durchlaufen hat.
 
 | *Events anzeigen/verbergen*
-|Events anzeigen oder verbergen. Wenn *Events anzeigen* aktiviert wird, wird der Bereich *Events* auf der rechten Seite im Ticket angezeigt. Alle bisherigen Events des Tickets werden angezeigt.
+|Wenn du *Events anzeigen* aktivierst, wird der Bereich *Events* auf der rechten Seite im Ticket angezeigt. Alle bisherigen Events des Tickets werden angezeigt.
 
 | *Eignerliste anzeigen/verbergen*
-|Eignerliste anzeigen oder verbergen. Wenn *Eignerliste anzeigen* aktiviert wird, wird der Bereich *Eigner* auf der rechten Seite im Ticket angezeigt. Alle Eigner des Tickets sowie deren Rolle werden angezeigt.
+|Wenn du *Eignerliste anzeigen* aktivierst, wird der Bereich *Eigner* auf der rechten Seite im Ticket angezeigt. Alle Eigner des Tickets sowie deren Rolle werden angezeigt.
 
 | *Tags anzeigen/verbergen*
-|Tags anzeigen oder verbergen. Wenn *Tags anzeigen* aktiviert wird, wird der Bereich *Tags* auf der rechten Seite im Ticket angezeigt. Dort können weitere <<#tags-erstellen-tickets, Tags>> hinzugefügt werden, die zuvor im Menü *Einrichtung » Einstellungen » Tags* erstellt wurden. Für ein Ticket können beliebig viele Tags gewählt werden.
+|Wenn du *Tags anzeigen* aktivierst, wird der Bereich *Tags* auf der rechten Seite im Ticket angezeigt. Dort können weitere <<#tags-erstellen-tickets, Tags>> hinzugefügt werden, die zuvor im Menü *Einrichtung » Einstellungen » Tags* erstellt wurden. Du kannst beliebig viele Tags für ein Ticket wählen.
 
 | *Neue Karte erstellen*
 |Erstellt aus dem Ticket heraus eine neue Karte auf dem aus der Dropdown-Liste gewählten Board. Der Karte kann außerdem ein Präfix hinzugefügt werden. xref:willkommen:system-personalisieren.adoc#350[Boards] erstellst du im Menü *plentymarkets Logo (Start) » Boards*.
@@ -484,7 +484,7 @@ Beim ersten Import der eBay-Nachrichten werden nur die Nachrichten der vergangen
 [#2300]
 ==== Tickets aus Formularen erstellen
 
-Mit Formularen kannst du Kontaktformulare in deinen plentyShop einbinden, damit Interessent:innen und Kund:innen mit dir in Kontakt treten können. Besucher:innen deines plentyShops füllen die Formulare aus und diese werden dann als Ticket erstellt. 
+Binde Kontaktformulare in deinen plentyShop ein, damit Interessent:innen und Kund:innen mit dir in Kontakt treten können. Besucher:innen deines plentyShops füllen die Formulare aus und diese werden dann als Ticket erstellt. 
 
 Damit die Tickets in deinem System ankommen und du anschließend aus dem Ticket antworten kannst, muss im Menü *Einrichtung » CRM » Ticketsystem » E-Mail-Konten* ein gültiges E-Mail-Konto eingerichtet sein.
 
@@ -515,13 +515,14 @@ Tickets aus Formularen erstellen:
 *_Hinweis:_* Die hier gewählten Daten werden aus dem Menü *Einrichtung » Einstellungen » Stammdaten* übernommen.
 . Entscheide, ob du im Formular eine Checkbox anzeigen lassen möchtest, mit der die Datenschutzerklärung akzeptiert werden kann.
 . *Speichere* (icon:save[]) die Einstellungen. +
-→ Jedes Mal, wenn ein:e Besucher:in ein Formular in deinem plentyShop ausgefüllt und abgeschickt wird, wird ein Ticket in deinem plentyShop erstellt.
+→ Jedes Mal, wenn ein:e Besucher:in ein Formular in deinem plentyShop ausgefüllt und abgeschickt wird, wird ein Ticket in deinem plentymarkets System erstellt.
 
 
 [IMPORTANT]
 .Zuordnung ausschließlich anhand von E-Mail-Adressen
 ====
-Kontaktformulare werden ausschließlich anhand der E-Mail-Adresse der Kund:innen zugeordnet. Eine E-Mail-Adresse in Kontaktformularen muss vom im dafür vorgesehenen Feld *E-Mail* eingegeben sein, ansonsten erkennt dein plentymarkets System nicht, dass es sich bei der Information um die E-Mail-Adresse handelt. E-Mail-Adressen, die in anderen Feldern, z.B. Nachricht oder Sonstiges eingegeben werden, werden _nicht_ für die Zuordnung berücksichtigt und werden auch _nicht_ für eine Antwort verwendet.
+Kontaktformulare werden ausschließlich anhand der E-Mail-Adresse der Kund:innen zugeordnet. Daher ist es nötig, dass eine E-Mail-Adresse in Kontaktformularen im dafür vorgesehenen Feld *E-Mail* eingegeben wird. Ansonsten erkennt dein plentymarkets System nicht, dass es sich bei der Information um die E-Mail-Adresse handelt. +
+E-Mail-Adressen, die in anderen Feldern wie zum Beispiel im Nachrichtenfeld eingegeben werden, werden _nicht_ für die Zuordnung berücksichtigt und werden auch _nicht_ für eine Antwort verwendet.
 ====
 
 Wenn die E-Mail-Adresse einem bestehenden Kontakt zugeordnet werden kann, wird dieser Kontakt im Ticket angezeigt. Wenn die E-Mail-Adresse keinem bestehenden Kontakt zugeordnet werden kann, siehst du die E-Mail-Adresse des Absenders _nicht_ im Ticketsystem. Wird nun eine Nachricht im Ticketsystem verfasst, wird diese trotzdem an die Absenderadresse versendet.
@@ -626,17 +627,17 @@ Ordner erstellen:
 |Einstellung |Erläuterung
 
 | *Name*
-|Namen für den Ordner eingeben. +
-*_Tipp:_* Die Ordnernamen gemäß der Themen wählen, zu denen es FAQs gibt.
+|Gib einen Namen für den Ordner ein. +
+*_Tipp:_* Wähle die Ordnernamen gemäß der Themen, zu denen es FAQs gibt.
 
 | *öffentlich*
-| *Sichtbar* wählen, wenn der Ordner z.B. auf der Webseite sichtbar sein soll.
+| Wähle *Sichtbar*, wenn der Ordner z.B. auf der Webseite sichtbar sein soll.
 
 | *Ticketsystem*
-| *Sichtbar* wählen, wenn die FAQ auch im Tab *FAQ* einer Ticketnachricht oder eines Ticketkommentars sichtbar sein soll.
+| Wähle *Sichtbar*, wenn die FAQ auch im Tab *FAQ* einer Ticketnachricht oder eines Ticketkommentars sichtbar sein soll.
 
 | *Oberordner*
-|Wenn der neue Ordner ein Unterordner eines bestehenden Ordners sein soll, den Ordner aus der Dropdown-Liste wählen.
+|Wenn der neue Ordner ein Unterordner eines bestehenden Ordners sein soll, wähle den Ordner aus der Dropdown-Liste.
 
 |====
 
@@ -661,20 +662,20 @@ FAQ anlegen:
 |Einstellung |Erläuterung
 
 | *Ordner*
-|Ordner aus der Dropdown-Liste wählen, in dem die FAQ sichtbar sein soll.
+|Wähle den Ordner aus der Dropdown-Liste, in dem die FAQ sichtbar sein soll.
 
 | *Öffentlich*
-| *Sichtbar* wählen, wenn die FAQ auf der Webseite sichtbar sein soll. +
-*_Wichtig:_* Wenn die Option *sichtbar* gewählt ist, muss der Ordner und eventuell der Unterordner auch als sichtbar eingestellt sein.
+| Wähle *Sichtbar*, wenn die FAQ auf der Webseite sichtbar sein soll. +
+*_Wichtig:_* Wenn du die Option *sichtbar* gewählt hast, muss der Ordner und eventuell der Unterordner auch als sichtbar eingestellt sein.
 
 | *Ticketsystem*
-| *Sichtbar* wählen, wenn die FAQ auch im Tab *FAQ* einer Ticketnachricht oder eines Ticketkommentars sichtbar sein soll.
+| Wähle *Sichtbar*, wenn die FAQ auch im Tab *FAQ* einer Ticketnachricht oder eines Ticketkommentars sichtbar sein soll.
 
 | *Frage*
-|Frage eingeben, z.B. "Kann ich Waren unfrei zurücksenden?"
+|Gib die Frage ein, z.B. "Kann ich Waren unfrei zurücksenden?"
 
 | *Antwort*
-|Antwort auf die Frage eingeben.
+|Gib die Antwort auf die Frage ein.
 
 |====
 
@@ -886,66 +887,66 @@ Allgemeine Ticketvorlage erstellen:
 |Einstellung |Erläuterung
 
 | *Name*
-|Name der Vorlage wird angezeigt. Der Name kann hier geändert werden.
+|Der Name der Vorlage wird hier angezeigt. Du kannst den Namen hier ändern.
 
 | *Position*
-|Zahl eingeben. Die Zahl legt die Reihenfolge der Vorlagen fest. Die Sortierung erfolgt standardmäßig nach aufsteigender Position. Die Zahl kann hier geändert werden. +
-*_Tipp:_* Positionsnummern in 10er-Schritten eingeben, damit später neue Vorlagen dazwischen eingefügt werden können.
+|Gib eine Zahl ein. Die Zahl legt die Reihenfolge der Vorlagen fest. Die Sortierung erfolgt standardmäßig nach aufsteigender Position. Du kannst die Zahl hier ändern. +
+*_Tipp:_* Gib die Positionsnummern in 10er-Schritten ein, damit du später neue Vorlagen dazwischen einfügen kannst.
 
 | *Titel*
-|Titel eingeben, damit Tickets, bei denen diese Vorlage angewendet wird, diesen Titel erhalten. Der Titel kann beim Erstellen des Tickets geändert werden.
+|Gib den Titel ein, damit Tickets, bei denen diese Vorlage angewendet wird, diesen Titel erhalten. Du kannst den Titel beim Erstellen des Tickets ändern.
 
 | *Kunde*
-|Person wählen, um eine Vorlage für diese Person zu erstellen.
+|Wähle eine Person, um eine Vorlage für diese Person zu erstellen.
 
 | *Vertraulichkeit*
-|Aktivieren, um eine Vorlage für vertrauliche Tickets zu erstellen. Bei vertraulichen Tickets erhalten nur Ticketeigner Nachrichten. Kund:innen erhalten bei dieser Einstellung trotz Ereignisaktionen keine Nachrichten.
+|Aktiviere diese Option, um eine Vorlage für vertrauliche Tickets zu erstellen. Bei vertraulichen Tickets erhalten nur Ticketeigner Nachrichten. Kund:innen erhalten bei dieser Einstellung trotz Ereignisaktionen keine Nachrichten.
 
 | *Mandant (Shop)*
-|Mandant (Shop) wählen, für den die Vorlage gültig sein soll.
+|Wähle den Mandant (Shop), für den die Vorlage gültig sein soll.
 
 | *Typ*
-|Tickettyp wählen, um eine Vorlage für diesen Typ zu erstellen. Tickettypen werden im Menü *Einrichtung » CRM » Ticketsystem » Einstellungen* im Tab <<crm/ticketsystem-nutzen#800, Typen &amp; Status>> erstellt.
+|Wähle den Tickettyp, um eine Vorlage für diesen Typ zu erstellen. Tickettypen werden im Menü *Einrichtung » CRM » Ticketsystem » Einstellungen* im Tab <<crm/ticketsystem-nutzen#800, Typen &amp; Status>> erstellt.
 
 | *Status*
-|Ticketstatus wählen, um eine Vorlage für diesen Status zu erstellen. Ticketstatus werden im Menü *Einrichtung » CRM » Ticketsystem » Einstellungen* im Tab <<crm/ticketsystem-nutzen#900, Typen &amp; Status>> erstellt.
+|Wähle den Ticketstatus wählen, um eine Vorlage für diesen Status zu erstellen. Ticketstatus werden im Menü *Einrichtung » CRM » Ticketsystem » Einstellungen* im Tab <<crm/ticketsystem-nutzen#900, Typen &amp; Status>> erstellt.
 
 | *Priorität*
-|Priorität wählen, um eine Vorlage für diese Priorität zu erstellen.
+|Wähle die Priorität, um eine Vorlage für diese Priorität zu erstellen.
 
 | *Eigner*
-|Eigner wählen, um eine Vorlage für diesen Eigner zu erstellen. Ob eine Benutzer:in als Eigner:in im Ticketsystem gewählt werden kann, wird im xref:business-entscheidungen:benutzerkonten-zugaenge.adoc#40[Benutzer:innenkonto] festgelegt.
+|Wähle den Eigner, um eine Vorlage für diesen Eigner zu erstellen. Ob eine Benutzer:in als Eigner:in im Ticketsystem gewählt werden kann, wird im xref:business-entscheidungen:benutzerkonten-zugaenge.adoc#40[Benutzer:innenkonto] festgelegt.
 
 | *Sichtbarkeit*
-|Eine der folgenden Optionen wählen: *Öffentlich*, *Persönlich* oder *Benutzerrollen*. +
+|Wähle *Öffentlich*, *Persönlich* oder *Benutzerrollen*. +
 *Öffentlich* = Die Vorlage steht jeder Benutzer:in zur Verfügung. +
 *Persönlich* = Die Vorlage steht der Benutzer:in zur Verfügung, der die Vorlage erstellt hat. Weitere Informationen findest du im Kapitel xref:crm:ticketsystem-nutzen.adoc#3200[Persönliche Ticketvorlage erstellen]. +
-*Benutzerrollen* = Bei Auswahl dieser Option wird eine weitere Einstellung geöffnet. In dieser Einstellung die Benutzer:innenrollen aktivieren, für die die Vorlage sichtbar sein soll.
+*Benutzerrollen* = Bei Auswahl dieser Option wird eine weitere Einstellung geöffnet. Aktiviere in dieser Einstellung die Benutzer:innenrollen, für die die Vorlage sichtbar sein soll.
 
 | *Benutzerrollen*
-|Nur sichtbar, wenn unter *Sichtbarkeit* die Option *Benutzerrollen* gewählt wurde. Benutzer:innenrollen aktivieren, für die die Vorlage sichtbar sein soll.
+|Nur sichtbar, wenn du unter *Sichtbarkeit* die Option *Benutzerrollen* gewählt hast. Aktiviere die Benutzer:innenrollen, für die die Vorlage sichtbar sein soll.
 
 | *Tags*
-|Tags wählen, um eine Vorlage mit diesen Tags zu erstellen. <<#tags-erstellen-tickets, Tags>> werden im Menü *Einrichtung » Einstellungen » Tags* erstellt.
+|Wähle Tags, um eine Vorlage mit diesen Tags zu erstellen. <<#tags-erstellen-tickets, Tags>> werden im Menü *Einrichtung » Einstellungen » Tags* erstellt.
 
 | *Endtermin*
-|Anzahl an Tagen eingeben. Die Vorlage enthält den Endtermin des Tickets, der nach dieser Anzahl von Tagen nach dem Erstellen des Tickets liegt.
+|Gib die Anzahl an Tagen ein. Die Vorlage enthält den Endtermin des Tickets, der nach dieser Anzahl von Tagen nach dem Erstellen des Tickets liegt.
 
 | *Wiedervorlage*
-|Anzahl an Tagen eingeben und Uhrzeit wählen. Die Vorlage enthält das Datum und die Uhrzeit, an dem das Ticket wieder vorgelegt wird.
+|Gib die Anzahl an Tagen ein und wähle eine Uhrzeit. Die Vorlage enthält das Datum und die Uhrzeit, an dem das Ticket wieder vorgelegt wird.
 
 | *Nachricht*
-| *FAQ* oder *Eigene Nachricht* aktivieren. +
-*FAQ* = Auf *Bearbeiten* klicken. Das Fenster *FAQ auswählen* wird geöffnet. xref:crm:ticketsystem-nutzen.adoc#2700[FAQ] wählen, die bei Verwendung der Vorlage eingegeben wird. Auf *Übernehmen* klicken. +
-*Eigene Nachricht* = Nachricht eingeben, die bei Verwendung der Vorlage eingegeben wird.
+| Aktiviere *FAQ* oder *Eigene Nachricht*. +
+*FAQ* = Klicke auf *Bearbeiten*. Das Fenster *FAQ auswählen* wird geöffnet. Wähle die xref:crm:ticketsystem-nutzen.adoc#2700[FAQ], die bei Verwendung der Vorlage eingegeben wird. Klicke auf *Übernehmen*. +
+*Eigene Nachricht* = Gib eine Nachricht ein, die bei Verwendung der Vorlage eingegeben wird.
 
 | *Kommentar*
-| *FAQ* oder *Eigener Kommentar* aktivieren. +
-*FAQ* = Auf *Bearbeiten* klicken. Das Fenster *FAQ auswählen* wird geöffnet. xref:crm:ticketsystem-nutzen.adoc#2700[FAQ] wählen, die bei Verwendung der Vorlage eingegeben wird. Auf *Übernehmen* klicken. +
-*Eigener Kommentar* = Kommentar eingeben, der bei Verwendung der Vorlage eingegeben wird.
+| Aktiviere *FAQ* oder *Eigener Kommentar*. +
+*FAQ* = Klicke auf *Bearbeiten*. Das Fenster *FAQ auswählen* wird geöffnet. Wähle die xref:crm:ticketsystem-nutzen.adoc#2700[FAQ] , die bei Verwendung der Vorlage eingegeben wird. Klicke auf *Übernehmen*. +
+*Eigener Kommentar* = Gib einen Kommentar ein, der bei Verwendung der Vorlage eingegeben wird.
 
 | *Grußformel einfügen*
-|Aktivieren, um die Grußformel am Ende einer Nachricht oder eines Kommentars automatisch einzufügen.
+|Aktiviere die Option, um die Grußformel am Ende einer Nachricht oder eines Kommentars automatisch einzufügen.
 |====
 
 Du bearbeitest eine Vorlage, indem du in das Textfeld klickst. Ein Klick auf *Löschen* (icon:minus-square[role="red"]) löscht die Zeile nach Bestätigung.
@@ -975,20 +976,20 @@ Im Menü *CRM » Ticketsystem* im Tab *Tickets* kannst du oberhalb der Ticketüb
 |Einstellung |Erläuterung
 
 | *Neues Ticket*
-|Klicken, um ein neues Ticket manuell zu erstellen.
+|Klicke auf *Neues Ticket*, um ein neues Ticket manuell zu erstellen.
 
 | *Neues Ticket aus Vorlage*
-|Klicken, um ein Ticket zu erstellen, in dem Einstellungen und Einträge, z.B. Mustertexte aus einer Vorlage, übernommen werden.
+|Klicke auf *Neues Ticket aus Vorlage*, um ein Ticket zu erstellen, in dem Einstellungen und Einträge, z.B. Mustertexte aus einer Vorlage, übernommen werden.
 
 | *Persönliche Vorlagen*
-|Persönliche Vorlagen erstellen oder bearbeiten. Die persönlichen Vorlagen sind auch bei den xref:crm:ticketsystem-nutzen.adoc#3100[allgemeinen Vorlagen] sichtbar. Allerdings werden die allgemeinen Vorlagen bei den persönlichen Vorlagen nicht angezeigt.
+|Erstelle oder bearbeite deine persönlichen Vorlagen. Die persönlichen Vorlagen sind auch bei den xref:crm:ticketsystem-nutzen.adoc#3100[allgemeinen Vorlagen] sichtbar. Allerdings werden die allgemeinen Vorlagen bei den persönlichen Vorlagen _nicht_ angezeigt.
 
 | *Gruppenfunktion*
-|Klicken, um mehrere zuvor aktivierte Tickets gleichzeitig zu bearbeiten.
+|Klicke auf *Gruppenfunktion*, um mehrere zuvor aktivierte Tickets gleichzeitig zu bearbeiten.
 
 | *Suchoptionen*
-|Über die Dropdown-Listen Suchoptionen einstellen oder Daten eingeben und so die Tickets in der Übersicht anzeigen, die angezeigt oder bearbeitet werden sollen, z.B. nur die Tickets eines bestimmten Eigners mit einer bestimmten Priorität. +
-Auf *Suchen* klicken, um die Tickets mit den gewählten Eigenschaften aufzulisten. +
+|Stelle über die Dropdown-Listen Suchoptionen ein oder gib Daten ein, um die Tickets in der Übersicht anzuzeigen, die angezeigt oder bearbeitet werden sollen. Wähle hier zum Beispiel nur die Tickets eines bestimmten Eigners mit einer bestimmten Priorität. +
+Klicke auf *Suchen*, um die Tickets mit den gewählten Suchoptionen aufzulisten. +
 Weitere Informationen zu den Suchoptionen findest du im Kapitel xref:crm:ticketsystem-nutzen.adoc#3400[Ticket suchen].
 
 | *Alter in Tagen*
@@ -1025,52 +1026,52 @@ Ticket suchen:
 |Einstellung |Erläuterung
 
 | *Suchen*
-|Suche ausführen.
+|Führt die Suche aus.
 
 | *Ticket-Daten*
-|Text eingeben, um nach diesen Inhalten zu suchen.
+|Gib einen Text ein, um nach diesen Inhalten zu suchen.
 
 | *Prio*
-|Priorität wählen, um nur Tickets dieser Dringlichkeitsstufe anzuzeigen.
+|Wähle die Priorität, um nur Tickets dieser Dringlichkeitsstufe anzuzeigen.
 
 | *Typ/Status*
-|Kombiniert nach Tickettyp und Ticketstatus suchen. Eine, mehrere oder alle Optionen aus der Dropdown-Liste wählen. +
-Im Menü *Einrichtung » CRM » Ticketsystem » Einstellungen* können xref:crm:ticketsystem-nutzen.adoc#800[Typen] und xref:crm:ticketsystem-nutzen.adoc#900[Status] bearbeitet und neue hinzugefügt werden.
+|Suche kombiniert nach Tickettyp und Ticketstatus. Wähle eine, mehrere oder alle Optionen aus der Dropdown-Liste. +
+Im Menü *Einrichtung » CRM » Ticketsystem » Einstellungen* kannst du xref:crm:ticketsystem-nutzen.adoc#800[Typen] und xref:crm:ticketsystem-nutzen.adoc#900[Status] bearbeiten und neue hinzufügen.
 
 | *Statusgruppe*
-|Eine, mehrere oder alle Optionen aus der Dropdown-Liste wählen. +
-Im Menü *Einrichtung » CRM » Ticketsystem » Einstellungen* können xref:crm:ticketsystem-nutzen.adoc#1000[Statusgruppen] bearbeitet und neue erstellt werden.
+|Wähle eine, mehrere oder alle Optionen aus der Dropdown-Liste. +
+Im Menü *Einrichtung » CRM » Ticketsystem » Einstellungen* kannst du xref:crm:ticketsystem-nutzen.adoc#1000[Statusgruppen] bearbeiten und neue erstellen.
 
 | *Eigner*
-|Ticketsuche auf einen Eigner eingrenzen. In der Dropdown-Liste stehen alle Benutzer:innen zur Auswahl, für die im Tab *Eigner* des Benutzer:innenkontos die Option *Ticket* aktiviert wurde.
+|Grenze die Ticketsuche auf einen Eigner ein. In der Dropdown-Liste stehen alle Benutzer:innen zur Auswahl, für die im Tab *Eigner* des Benutzer:innenkontos die Option *Ticket* aktiviert wurde.
 
 | *Kundenklasse*
-|Kundenklasse wählen, um nur Tickets von Kund:innen dieser Kundenklasse zu suchen. xref:crm:kontakte-verwalten.adoc#15[Kundenklassen] werden im Menü *Einrichtung » CRM » Kundenklassen* erstellt.
+|Wähle eine Kundenklasse, um nur Tickets von Kund:innen dieser Kundenklasse zu suchen. xref:crm:kontakte-verwalten.adoc#15[Kundenklassen] werden im Menü *Einrichtung » CRM » Kundenklassen* erstellt.
 
 | *Mandant (Shop)*
-|Mandant (Shop) aus der Dropdown-Liste wählen.
+|Wähle den Mandant (Shop) aus der Dropdown-Liste.
 
 | *Kunden-ID*
-|Kontakt-ID eingeben, um nur die Tickets dieser Person anhand der ID zu suchen.
+|Gib eine Kontakt-ID ein, um nur die Tickets dieser Person anhand der ID zu suchen.
 
 | *Endtermin*
-|Eine der folgenden Optionen aus der Dropdown-Liste wählen, um nur Tickets zu suchen, deren Endtermin der Option entspricht: *gestern*, *heute*, *morgen*, *überschritten* oder *in der Zukunft*.
+|Wähle eine der folgenden Optionen aus der Dropdown-Liste, um nur Tickets zu suchen, deren Endtermin einer der folgenden Optionen entspricht: *gestern*, *heute*, *morgen*, *überschritten* oder *in der Zukunft*.
 
 | *Rolle*
-|Eine, mehrere Rollen oder alle Optionen aus der Dropdown-Liste wählen. xref:crm:ticketsystem-nutzen.adoc#700[Rollen] werden im Menü *Einrichtung » CRM » Ticketsystem » Einstellungen* erstellt.
+|Wähle eine, mehrere oder alle Optionen aus der Dropdown-Liste. xref:crm:ticketsystem-nutzen.adoc#700[Rollen] werden im Menü *Einrichtung » CRM » Ticketsystem » Einstellungen* erstellt.
 
 | *Vergleichsoperator für den Fortschritt*
-|Mit dem Vergleichsoperator eingrenzen, ob der Fortschritt eines Tickets größer, kleiner oder gleich dem gewählten Fortschritt sein soll.
+|Grenze mit dem Vergleichsoperator ein, ob der Fortschritt eines Tickets größer, kleiner oder gleich dem gewählten Fortschritt sein soll.
 
 | *Fortschritt*
-|Prozentzahl aus der Dropdown-Liste wählen, um nur Tickets zu suchen, die der Kombination aus dem gewählten Vergleichsoperator und dem Fortschritt entsprechen.
+|Wähle eine Prozentzahl aus der Dropdown-Liste, um nur Tickets zu suchen, die der Kombination aus dem gewählten Vergleichsoperator und dem Fortschritt entsprechen.
 
 | *Wiedervorlage*
-|Wiedervorlage aus der Dropdown-Liste wählen, um nur Tickets zu suchen, in denen diese Wiedervorlage eingestellt ist. +
-Per Aktionsmanager im Menü *Einrichtung » CRM » Ticketsystem » Aktionen* kann an das Ticket erinnert werden. Ein Beispiel, wie man eine Aktion einrichtet sowie Filter und Uhrzeit wählt, ist im Kapitel xref:crm:ticketsystem-nutzen.adoc#3000[Tickets automatisch löschen] beschrieben.
+|Wähle eine Wiedervorlage aus der Dropdown-Liste, um nur Tickets zu suchen, in denen diese Wiedervorlage eingestellt ist. +
+Per Aktionsmanager im Menü *Einrichtung » CRM » Ticketsystem » Aktionen* kannst du dich an das Ticket erinnern lassen. Ein Beispiel, wie man eine Aktion einrichtet sowie Filter und Uhrzeit wählt, ist im Kapitel xref:crm:ticketsystem-nutzen.adoc#3000[Tickets automatisch löschen] beschrieben.
 
 | *Tags*
-|In das Feld klicken. Einen oder mehrere Tags wählen, um nur Tickets zu suchen, in denen diese Tags hinterlegt sind. Tags müssen zuvor im Menü *Einrichtung » Einstellungen » Tags* erstellt werden.
+|Klicke in das Feld *Tags*. Wähle einen oder mehrere Tags, um nur Tickets zu suchen, in denen diese Tags hinterlegt sind. Tags müssen zuvor im Menü *Einrichtung » Einstellungen » Tags* erstellt werden.
 |====
 
 [#3500]
@@ -1143,7 +1144,7 @@ Rot = Das Ticket ist mindestens 8 Tage alt.
 |Zeigt die ID und den Namen der Person an. Personen werden teilweise xref:crm:ticketsystem-nutzen.adoc#2100[automatisch zugeordnet], z.B. beim automatischen Erstellen von Tickets aus E-Mails.
 
 | *Ticket als vertraulich definieren (unsichtbar für Kunden)*
-|Klicken, um das Ticket als vertraulich zu definieren. Wenn das Ticket vertraulich ist, ist die Nachrichtenfunktion deaktiviert. Vertrauliche Tickets sind für Kund:innen nicht sichtbar.
+|Aktiviere diese Option, um das Ticket als vertraulich zu definieren. Wenn das Ticket vertraulich ist, ist die Nachrichtenfunktion deaktiviert. Vertrauliche Tickets sind für Kund:innen _nicht_ sichtbar.
 
 | *Auftrags-ID*
 |Zeigt die Auftrags-ID an, wenn das Ticket mit einem Auftrag verknüpft ist.
@@ -1294,7 +1295,7 @@ Individuell einstellbare Filter erstellen:
 → Das Fenster *Benutzerdefinierte Filter erstellen* wird geöffnet.
 . Gib im Bereich *Einstellungen* den Namen für den Filter ein.
 . Wähle im Bereich *Einstellungen* ein Symbol aus der Dropdown-Liste.
-. Nimm die gewünschten Einstellungen vor. Beachte dazu die Erläuterungen zu den *Filtern* in <<#table-search-ticket>> im Kapitel xref:crm:ticketsystem-nutzen.adoc#3400[Ticket suchen].
+. Nimm die gewünschten Einstellungen vor. Beachte dazu die Erläuterungen zu den Filtern in <<#table-search-ticket>> im Kapitel xref:crm:ticketsystem-nutzen.adoc#3400[Ticket suchen].
 . *Speichere* (icon:save[role="green"]) die Einstellungen.
 
 [#4800]
